town hall image cropped fix

--- a/src/scss/partials/_city-header.scss
+++ b/src/scss/partials/_city-header.scss
@@ -45,7 +45,7 @@
     position: absolute;
     display: inline-block;
     content: '';
-    width: 320px;
+    width: 370px;
     background-size: 370px;
     left: 50%;
     bottom: 3px;
